[package]
name = "sortRecentYoutubeViewsOfChannel"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
reqwest = "0.11.18"
serde_json = "1.0"
num-format = "0.4"
iso8601-duration = "0.2"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "draft"
path = "src/draft.rs"
